# testhiredis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conandata.yml  main.cpp
src/: main.cpp  testhiredis.cpp
